[package]
name = "coffee_recommendations"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
